[package]
name = "images"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.24.7", features = ["avif", "webp"] }
num_cpus = "1.16.0"
csv = "1.3.0"
threadpool = "1.8.0"
disruptor = "0.5.0"
rayon = "1.9.0"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.12"
tokio = { version = "1.36.0", features = ["full"] }



[profile.release-lto]
inherits = "release"
lto = "fat"
opt-level = 3


[features]
build-bindings = []